src/FinancialForce Accounting/objects/codaPrintFormat__c.object
<CustomObject>
    <description>Stores a part of the formats saved from FinancialForce Print Formatter.</description>
    <fields>
        <fullName>CmpCodeVocabId__c</fullName>
        <label>CmpCodeVocabId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FixedPosition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FixedPosition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FooterHeight__c</fullName>
        <label>FooterHeight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FormType__c</fullName>
        <label>FormType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormatCode__c</fullName>
        <label>FormatCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Format</label>
        <referenceTo>codaFormatData__c</referenceTo>
        <relationshipLabel>Print Formats</relationshipLabel>
        <relationshipName>Print_Formats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GridOn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GridOn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GridSizeX__c</fullName>
        <label>GridSizeX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GridSizeY__c</fullName>
        <label>GridSizeY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HeaderHeight__c</fullName>
        <label>HeaderHeight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarginBottom__c</fullName>
        <label>MarginBottom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarginLeft__c</fullName>
        <label>MarginLeft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarginRight__c</fullName>
        <label>MarginRight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarginTop__c</fullName>
        <label>MarginTop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orientation__c</fullName>
        <label>Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>com_printformat_page_orientation_portrait</fullName>
                </value>
                <value>
                    <fullName>com_printformat_page_orientation_landscape</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PFName__c</fullName>
        <label>PFName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageHeight__c</fullName>
        <label>PageHeight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PageWidth__c</fullName>
        <label>PageWidth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaperSize__c</fullName>
        <label>PaperSize</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>com_printformat_paper_size_a4</fullName>
                </value>
                <value>
                    <fullName>com_printformat_paper_size_a3</fullName>
                </value>
                <value>
                    <fullName>com_printformat_paper_size_a5</fullName>
                </value>
                <value>
                    <fullName>com_printformat_paper_size_foolscap_folio</fullName>
                </value>
                <value>
                    <fullName>com_printformat_paper_size_letter</fullName>
                </value>
                <value>
                    <fullName>com_printformat_paper_size_custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShortName__c</fullName>
        <label>ShortName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>com_printformat_template_yes</fullName>
                </value>
                <value>
                    <fullName>com_printformat_template_no</fullName>
                </value>
                <value>
                    <fullName>com_printformat_template_protected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uom__c</fullName>
        <label>Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>com_printformat_uom_cm</fullName>
                </value>
                <value>
                    <fullName>com_printformat_uom_inch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UseFormat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UseFormat</label>
        <type>Checkbox</type>
    </fields>
    <label>Print Format</label>
    <nameField>
        <label>Print Format Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Print Formats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>